# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "day_01"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
googletest = { workspace = true }
indoc = { workspace = true }
rstest = { workspace = true }
