# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "day_02"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
indoc = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
rstest = { workspace = true }
